# DNAStorageCoding

./: .gitignore  AGENTS.md  final_configs.md  final_results.md  plan.md  preliminary_plan.md
dna_storage_sim/: FINAL_A_1mb_c128_t20.json  FINAL_A_5mb_c128_t20.json  FINAL_R_A_100kb_c128_t20.json  FINAL_R_A_10kb_c128_t20.json  FINAL_R_A_500kb_c128_t20.json  FINAL_R_A_50kb_c128_t20.json  FINAL_R_C_100kb_c256_t20.json  FINAL_R_C_100kb_s3_rep3_p32_t20.json  FINAL_R_C_100kb_s3_rep3_p64_t20.json  FINAL_R_C_100kb_s3_rep5_p32_t20.json  FINAL_R_C_10kb_c256_t20.json  README.md  config_0p1mb_realistic_illumina_like.json  config_0p1mb_realistic_illumina_like_fixed.json  config_0p5mb_easy_subonly.json  config_0p5mb_easy_tiny_indel.json  config_0p5mb_example.json  config_0p5mb_realistic_illumina_like.json  config_0p5mb_realistic_illumina_like_fixed.json  config_10kb_realistic_high_redundancy.json  config_10kb_realistic_high_redundancy_wide_grid.json  config_10kb_realistic_high_redundancy_wide_grid_128.json  config_50kb_realistic_high_redundancy_wide_grid.json  config_s3_demo_frontier.json  config_s3_fixed_test.json  config_s3_frontier_tuned.json  environment.Bi1C.yml  fast_large_config.json  indel_resilience_plan.md  pyproject.toml  run_all_final_configs.py  smoke_config.json
dna_storage_sim/reports/: final_report.md  final_report_easy_0p5mb_subonly.md  final_report_easy_0p5mb_tiny_indel.md  final_report_example_0p5mb.md  final_report_fast_large.md  final_report_realistic_10kb_high_redundancy_v1.md  final_report_realistic_10kb_high_redundancy_wide_grid_v1.md  (+4 more)
(+526 files in other folders)
