[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dna-storage-sim"
version = "0.1.0"
description = "Reproducible DNA storage simulation and codec comparison"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "tqdm>=4.65",
  "pytest>=7.0",
  "rapidfuzz>=3.0",
  "reedsolo>=1.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
